# asteroids

./: .clang-tidy  .gitignore  CMakeEmbedResources.cmake  CMakeLists.txt  Defer.h  Game.cpp  Game.h  README.md  Scene.h  TestScene.cpp  TestScene.h  main.cpp
.github/actions/configure-cmake/: action.yml
.github/actions/install-linux-deps/: action.yml
.github/workflows/: cmake.yml
resources/: piano-loop.json  public-pixel.json
scripts/: run_sanitizers.sh  run_valgrind.sh
src/: SFML.h  main.cpp
src/asteroids/: Asteroid.cpp  Asteroid.h  AsteroidShape.cpp  AsteroidShape.h  AsteroidsWorld.cpp  AsteroidsWorld.h
src/basic_test/: Stats.cpp  Stats.h  TimerTest.cpp  TimerTest.h
src/bounce_test/: BounceTest.cpp  BounceTest.h  Bouncy.cpp  Bouncy.h  Player.cpp  Player.h
src/game/: Game.cpp  Game.h
src/main/: Debouncer.cpp  Debouncer.h  MainLoop.cpp  MainLoop.h  Menu.cpp  Menu.h  TestScene.cpp  TestScene.h  WorldInterface.h  game_exception.cpp  game_exception.h  main.cpp
src/menu/: RainbowBackground.cpp  RainbowBackground.h  Stats.cpp  Stats.h  UI.cpp  UI.h  UIItem.cpp  UIItem.h  UILabel.cpp  UILabel.h  UIOption.cpp  UIOption.h  ui_item_not_found.cpp  ui_item_not_found.h  unwanted_notify_tick_call.cpp  unwanted_notify_tick_call.h
src/physics/: AABB.cpp  AABB.h  CollisionTest.cpp  CollisionTest.h  GameObject.cpp  GameObject.h  Physics.cpp  Physics.h  PhysicsData.cpp  PhysicsData.h
src/resources/: EmbeddedAccessor.h  GlobalLoaders.cpp  GlobalLoaders.h  OnDemandLoader.h  OnDemandLoader.tpp  ResourceBase.cpp  ResourceBase.h  ResourceBuilder.cpp  ResourceBuilder.h  ResourceLoader.h  singleton_instance_error.cpp  singleton_instance_error.h
src/scenes/: Scene.h  TestScene.cpp  TestScene.h
src/utility/: Defer.h  message.cpp  message.h  minmax.h
src/world/: SwitchCommand.cpp  SwitchCommand.h  SwitchFactory.h  SwitchFactory.tpp  World.cpp  World.h  WorldBase.cpp  WorldBase.h  WorldInterface.cpp  WorldInterface.h  type_not_of_claimed_base.cpp  type_not_of_claimed_base.h
